# site-monitor-rust

./: .env.example  Cargo.toml
src/: main.rs
src/config/: environment_variables.rs  mod.rs  watch_list.rs
src/libs/: http.rs  logger.rs  mod.rs  notify_error.rs  on_error.rs  on_ok.rs  validators.rs
