[package]
name = "site-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
log = {version = "0.4.22", features = []}
log4rs = { version = "1.3.0", features = ["console_appender"] }
chrono = { version = "0.4.38", features = []}
reqwest = { version = "0.12", features = ["cookies"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
latest_user_agent = {version = "0.2.2", features = []}
lettre = { version = "0.11.7", features = [] }
dotenvy = { version = "0.15.0" , features = []}
validators = { version = "0.25.3", features = [] }
